# aoc2019

./: Cargo.toml
.github/workflows/: rust.yml
src/: answer.rs  bin.rs  config.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs  run.rs
tests/: test.rs
