[package]
name = "aoc2019"
version = "0.1.0"
authors = ["mingli <mingli34@gmail.com>"]
edition = "2018"

[lib]
name = "aoc2019"
path = "src/lib.rs"

[[bin]]
name = "aoc2019"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.11.0"
chrono = "0.4.10"
im = "14.0.0"
io = "0.0.2"
itertools = "0.8.2"
regex = "1.3.1"
